--- a/gear5-ex-2/cart-checkout.html
+++ b/gear5-ex-2/cart-checkout.html
@@ -51,6 +51,11 @@
         <div class="cart-value js-cart-value">0</div>
       </div>
 
+      <div class="profile">
+        <div class="profile-greet">Hi, Ussop</div>
+        <img src="profile img/fb4342e0ac4a24cf8c08d0031174e228.jpg" alt="">
+    </div>
+
 
     </div>
   </div>
