--- a/gear5-ex-2/index.html
+++ b/gear5-ex-2/index.html
@@ -47,6 +47,8 @@
             <div class="profile">
                 <div class="profile-greet">Hi, Ussop</div>
                 <img src="profile img/fb4342e0ac4a24cf8c08d0031174e228.jpg" alt="">
+
+                <div class="profile-pop profile-pop-js">hi</div>
             </div>
 
         </div>
