--- a/gear5-ex-2/login.html
+++ b/gear5-ex-2/login.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="login-submit">
-                    <button type="submit">Submit</button>
+                    <button type="submit">Login</button>
                 </div>
     
             </form>
