--- a/gear5-ex-2/register.html
+++ b/gear5-ex-2/register.html
@@ -23,8 +23,8 @@
             <!-- <div class="login-input"> -->
                 <form action="backend/register.php" method="POST" enctype="application/x-www-form-urlencoded">
                     <div class="namex input-details">
-                        <input class="name fname" type="text" placeholder="First name" name="pfname">
-                        <input class="name lname" type="text" placeholder="Last name" name="plname">
+                        <input class="name fname" type="fname" placeholder="First name" name="pfname">
+                        <input class="name lname" type="email" placeholder="Last name" name="plname">
                         <i class='bx bxs-user'></i>
                     </div>
 
